# NeoSTAND

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: ci.yml  release.yml
src/: NeoSTAND.cpp  NeoSTAND.h  PLUGIN_NAME.cpp  PLUGIN_NAME.h  Version.h.in  main.cpp
src/config/: LFBO.json  LFMN.json  LFPG.json  config.json
src/core/: CompileCommands.h  DataManager.cpp  DataManager.h  NeoSTANDCommandProvider.h  PLUGIN_NAMECommandProvider.h  TagFunctions.h  TagItems.h
src/utils/: Color.h
